@@ -43,8 +43,6 @@ class SlurmdCharm(CharmBase):
             self.on.install: self._on_install,
             self.on.upgrade_charm: self._on_upgrade,
             self.on.config_changed: self._on_config_changed,
-            self._slurmd_peer.on.slurmd_peer_available: self._on_set_partition_info_on_app_relation_data,
-            self._slurmd_peer.on.slurmd_peer_departed: self._on_set_partition_info_on_app_relation_data,
             self._slurmd.on.slurmctld_available: self._on_slurmctld_available,
             # actions
             self.on.version_action: self._on_version_action,
@@ -66,6 +64,10 @@ class SlurmdCharm(CharmBase):
 
     def _on_install(self, event):
         """Perform installation operations for slurmd."""
+        if not self._slurmd_peer.available:
+            event.defer()
+            return
+
         self.unit.set_workload_version(Path("version").read_text().strip())
 
         self.unit.status = WaitingStatus("Installing slurmd")
@@ -88,10 +90,15 @@ class SlurmdCharm(CharmBase):
     def _check_status(self) -> bool:
         """Check if we heve all needed components.
 
-        - slurm installed,
-        - slurmctld available and working,
+        - partition name
+        - slurm installed
+        - slurmctld available and working
         - munge key configured and working
         """
+        if not self.get_partition_name():
+            self.unit.status = WaitingStatus("Waiting on charm configuration.")
+            return False
+
         if not self._stored.slurm_installed:
             self.unit.status = BlockedStatus("Error installing slurmd")
             return False
@@ -107,7 +114,7 @@ class SlurmdCharm(CharmBase):
         self.unit.status = ActiveStatus("slurmd available")
         return True
 
-    def _check_slurmd(self, max_attemps=3) -> None:
+    def _check_slurmd(self, max_attemps=10) -> None:
         """Ensure slurmd is up and running."""
         logger.debug("## Checking if slurmd is active")
 
@@ -119,7 +126,7 @@ class SlurmdCharm(CharmBase):
                 logger.warning("## Slurmd not running, trying to start it")
                 self.unit.status = WaitingStatus("Starting slurmd")
                 self._slurm_manager.restart_slurm_component()
-                sleep(1 + i)
+                sleep(2 + i)
 
         if self._slurm_manager.slurm_is_active():
             self._check_status()
@@ -134,10 +141,6 @@ class SlurmdCharm(CharmBase):
         if not self._stored.slurm_installed:
             event.defer()
             return
-
-        if self.model.unit.is_leader():
-            self._get_set_partition_name()
-        logger.debug(f"## partition_name: {self.get_partition_name()}")
 
         logger.debug('#### Slurmctld available - setting overrides for configless')
         # get slurmctld host:port from relation and override systemd services
@@ -159,8 +162,26 @@ class SlurmdCharm(CharmBase):
         self._check_slurmd()
 
     def _on_config_changed(self, event):
+        """Handle charm configuration changes."""
+        # Determine if a user-supplied partition-name config exists, if so
+        # ensure the partition_name is consistent with the supplied config.
+        # If no partition name has been specified then generate one.
         if self.model.unit.is_leader():
-            self._get_set_partition_name()
+            partition_name = self.get_partition_name()
+            if partition_name:
+                partition_name_from_config = self.config.get("partition-name")
+                if partition_name_from_config:
+                    if partition_name != partition_name_from_config:
+                        self._set_partition_name(partition_name_from_config.replace(' ', '-'))
+                    else:
+                        logger.debug("Partition name unchanged.")
+                else:
+                    logger.debug("Partition name unchanged.")
+            else:
+                generated_partition_name = f"juju-compute-{random_string()}"
+                logger.debug(f"Partition name: {generated_partition_name}")
+                self._set_partition_name(generated_partition_name)
+
             self._on_set_partition_info_on_app_relation_data(event)
 
         nhc_conf = self.model.config.get('nhc-conf')
@@ -200,12 +221,12 @@ class SlurmdCharm(CharmBase):
     def _on_node_configured_action(self, event):
         """Remove node from DownNodes."""
         # trigger reconfig
-        self._slurmd_peer.configure_new_node()
+        self._slurmd.configure_new_node()
         logger.debug('### This node is not new anymore')
 
     def _on_get_node_inventory_action(self, event):
         """Return node inventory."""
-        inventory = self._slurmd_peer.get_node_inventory()
+        inventory = self._slurmd.node_inventory
         event.set_results({'inventory': inventory})
 
     def get_infiniband_repo(self, event):
@@ -279,45 +300,26 @@ class SlurmdCharm(CharmBase):
 
     def _assemble_partition(self):
         """Assemble the partition info."""
-        self._get_set_partition_name()
         partition_name = self.get_partition_name()
         partition_config = self.config.get("partition-config")
         partition_state = self.config.get("partition-state")
 
-        slurmd_inventory = self._slurmd_peer.get_slurmd_inventory()
-        if not slurmd_inventory:
-            return None
-
         return {
-            "inventory": slurmd_inventory,
             "partition_name": partition_name,
             "partition_state": partition_state,
             "partition_config": partition_config,
         }
 
-    def _get_set_partition_name(self):
-        """Set the partition name."""
-        # Determine if a user-supplied partition-name config exists, if so
-        # ensure the partition_name is consistent with the supplied config.
-        # If no partition name has been specified then generate one.
-        partition_name = self.config.get("partition-name")
-        if partition_name:
-            partition_name = partition_name.replace(' ', '-')
-            self._set_partition_name(partition_name)
-        else:
-            if not self.get_partition_name():
-                self._set_partition_name(f"juju-compute-{random_string()}")
-
     def get_partition_name(self) -> str:
-        """Return the partition_name from the peer relation."""
+        """Return the partition_name in the slurmd relation."""
         return self._slurmd_peer.partition_name
 
     def _set_partition_name(self, name: str):
-        """Set the partition_name in the peer relation."""
+        """Set the partition_name in the slurmd relation."""
         self._slurmd_peer.partition_name = name
 
     @property
-    def hostname(self):
+    def hostname(self) -> str:
         """Return the hostname."""
         return self._slurm_manager.hostname
 
